--- a/src/water-light.css
+++ b/src/water-light.css
@@ -194,6 +194,7 @@ select {
   display: block;
   box-sizing: border-box;
   padding: 10px 10px 5px 10px;
+  background: transparent;
 }
 
 input,
